crates/analyzer/tests/snapshots/errors__call_create2_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: incorrect type for argument to `Bar.create2`
  ┌─ compile_errors/call_create2_with_wrong_type.fe:5:26
  │
5 │         Bar.create2(ctx, true, 1)
  │                          ^^^^ this has type `bool`; expected a number

error: `create2` expects 3 arguments, but 2 were provided
  ┌─ compile_errors/call_create2_with_wrong_type.fe:6:13
  │
6 │         Bar.create2(ctx, 1)  // agroce //447
  │             ^^^^^^^ ---  - supplied 2 arguments
  │             │             
  │             expects 3 arguments

error: `create2` expects 3 arguments, but 1 was provided
  ┌─ compile_errors/call_create2_with_wrong_type.fe:7:13
  │
7 │         Bar.create2(ctx)
  │             ^^^^^^^ --- supplied 1 argument
  │             │        
  │             expects 3 arguments


